# codal-tflite

./: CMakeLists.txt  LICENSE  README.md
inc/: tflite_codal.h
source/: tflite_codal.cpp
